2003-01-03  Ross Burton  <ross@burtonini.com>

	* configure.in: New version.
	* NEWS: List the changes.

2002-12-16  Ross Burton  <ross@burtonini.com>

	* configure.in: New version
	* NEWS: Detail the changes.
	* configure.in: Use GNOME_CXX_CHECK instead of GAMES_. Also start
	to reduce the number of entries in acconfig.h
	* games-macros/games-cxx-check.m4, games-macros/README: Remove the
	m4 code to check for a C++ compiler as we use gnome-common now.

2002-12-11  Ross Burton  <ross@burtonini.com>

	* aisleriot/sol.desktop.in, freecell/src/freecell.desktop.in,
	gataxx/gataxx.desktop.in, glines/glines.desktop.in,
	gnect/data/gnect.desktop.in, gnibbles/gnibbles.desktop.in,
	gnobots2/gnobots2.desktop.in,
	gnome-stones/gnome-stones.desktop.in,
	gnometris/gnometris.desktop.in, gnomine/gnomine.desktop.in,
	gnotravex/gnotravex.desktop.in, gnotski/gnotski.desktop.in,
	gtali/gtali.desktop.in, iagno/iagno.desktop.in
	mahjongg/mahjongg.desktop.in, same-gnome/same-gnome.desktop.in,
	xbill/xbill.desktop.in: Added StartupNotify=true tags so that the
	busy cursor appears. Eye candy!

2002-11-25  Ross Burton  <ross@burtonini.com>

	* configure.in: New version, 2.1.3.

2002-11-17  Ross Burton  <ross@burtonini.com>

	* aisleriot/Makefile.am, gataxx/Makefile.am, glines/Makefile.am,
	gnibbles/Makefile.am, gnobots2/Makefile.am,
	gnome-stones/Makefile.am, gnometris/Makefile.am,
	gnomine/ChangeLog, gnomine/Makefile.am, gnotravex/Makefile.am,
	gnotski/Makefile.am, gtali/Makefile.am, iagno/Makefile.am,
	iagno2/Makefile.am, mahjongg/Makefile.am, same-gnome/Makefile.am,
	xbill/Makefile.am: Remove built files when doing a clean.

2002-11-15  Ross Burton  <ross@burtonini.com>

	* Makefile.am: Remove the generated intltool-* files.

2002-11-11  Dmitry G. Mastrukov  <dmitry@taurussoft.org>

	* configure.in: Added Belarusian to ALL_LINGUAS

2002-11-01  Ross Burton  <ross@burtonini.com>

	* configure.in: Push version all the way to 2.1.2.

2002-10-31  Ross Burton  <ross@burtonini.com>
