@@ -435,7 +435,9 @@ void about_cb(GtkWidget *widget, gpointer data)
 				strcmp (translator_credits, "translator_credits") != 0 ? translator_credits : NULL,
 				pixbuf);
 			
-			
+	if (pixbuf != NULL)
+		gdk_pixbuf_unref (pixbuf);
+				
 	g_signal_connect (GTK_OBJECT (about), "destroy", GTK_SIGNAL_FUNC
 			(gtk_widget_destroyed), &about);
 	gtk_window_set_transient_for (GTK_WINDOW(about), GTK_WINDOW(window));
