@@ -1,3 +1,15 @@
+2003-01-08  Alex Duggan  <aldug@gnome.org>
+
+	* aisleriot/menu.c, gataxx/gataxx.c,
+	glines/glines.c, gnibbles/main.c,
+	gnobots2/menu.c, gnome-stones/main.c,
+	gnometris/tetris.cpp, gnomine/gnomine.c,
+	gnotravex/gnotravex.c, gnotski/gnotski.c,
+	gtali/gyahtzee.c, iagno/gnothello.c,
+	mahjongg/mahjongg.c, same-gnome/same-gnome.c:
+	Use aisleriot's logo in it's about box, fix small memory
+	leaks in about boxes when not unref()'ing the pixbuf. 
+
 2003-01-03  Ross Burton  <ross@burtonini.com>
 
 	* configure.in: New version.
